--- a/index.html
+++ b/index.html
@@ -1,157 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CONFESSION-LOG_0173</title>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
+    body {
       background-color: black;
       color: white;
       font-family: 'VT323', monospace;
-      height: 100%;
+      margin: 0;
       overflow: hidden;
+      user-select: none;
     }
-
-    #frame {
+    .screen {
       border: 2px solid white;
-      padding: 20px;
       width: 80%;
       max-width: 800px;
-      height: 400px;
-      margin: 50px auto;
+      margin: 100px auto;
+      padding: 20px;
       position: relative;
+      min-height: 200px;
       box-sizing: border-box;
-      overflow: hidden;
-      animation: floating 4s infinite ease-in-out;
     }
-
-    @keyframes floating {
-      0%, 100% {
-        transform: translate(0, 0);
-      }
-      50% {
-        transform: translate(1px, -1px);
-      }
-    }
-
-    #startBtn {
-      padding: 10px 20px;
+    .start-btn {
       border: 2px solid white;
-      color: white;
-      background: none;
-      font-size: 1.5em;
+      padding: 10px 20px;
+      display: inline-block;
       cursor: pointer;
-      font-family: 'VT323', monospace;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
     }
-
-    .fuchsia {
-      color: fuchsia;
-    }
-
-    #gif {
-      display: none;
-      width: 100%;
-      height: auto;
-      margin-top: 10px;
-    }
-
-    .glitch {
-      animation: glitch 1s infinite;
-    }
-
-    @keyframes glitch {
-      0% { transform: translate(0); }
-      20% { transform: translate(-1px, 1px); }
-      40% { transform: translate(1px, -1px); }
-      60% { transform: translate(-1px, -2px); }
-      80% { transform: translate(1px, 2px); }
-      100% { transform: translate(0); }
-    }
-
     .hidden {
       display: none;
     }
+    .fuchsia {
+      color: fuchsia;
+    }
+    .glitch {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    .glitch img {
+      width: 100%;
+      height: auto;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
+    .shake {
+      animation: shake 0.5s infinite;
+    }
+    @keyframes shake {
+      0% { transform: translate(0, 0); }
+      25% { transform: translate(1px, -1px); }
+      50% { transform: translate(-1px, 1px); }
+      75% { transform: translate(1px, 1px); }
+      100% { transform: translate(-1px, -1px); }
+    }
   </style>
 </head>
-
 <body>
-  <div id="frame">
-    <button id="startBtn">Click to start...</button>
-    <pre id="output"></pre>
-    <img id="gif" src="giphy.gif" alt="glitch gif">
+  <div class="screen" id="screen">
+    <div class="start-btn" id="startBtn">Click to start...</div>
   </div>
-
+  <div class="glitch" id="glitch">
+    <img src="vhs-glitch.gif" alt="glitch" />
+  </div>
   <script>
-    const startBtn = document.getElementById('startBtn');
-    const output = document.getElementById('output');
-    const gif = document.getElementById('gif');
+    const screen = document.getElementById("screen");
+    const startBtn = document.getElementById("startBtn");
+    const glitch = document.getElementById("glitch");
 
-    const stage1 = `>> CONFESSION-LOG_0173 :: ACCESS GRANTED\n>> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED\n\n>> Parsing soul fragment...\n\n>> [IN LUMEN VERITAS]\n. . .\n\n>> ██ Data stream unstable ██\n\n>> Salvation Attempt: FAILED\n\n`;
+    const delay = (ms) => new Promise(res => setTimeout(res, ms));
 
-    const stage2 = `>> SUBJECT 0173: <span class='fuchsia'>“I prayed. No one answered.”</span>\n>> SUBJECT 0173: <span class='fuchsia'>“I heard laughter in the static.”</span>\n\n>> Faith checksum: NULL\n\n`;
-
-    const stage3 = `>> > SYSTEM RESPONSE:`;
-
-    const finalText = `░░░ WE SEE YOU ░░░`;
-
-    function delay(ms) {
-      return new Promise(resolve => setTimeout(resolve, ms));
-    }
-
-    async function typeText(text, el, delayTime = 50) {
-      el.innerHTML = '';
+    const typeLine = async (text, slow = false) => {
+      let line = document.createElement("div");
+      screen.appendChild(line);
       for (let i = 0; i < text.length; i++) {
-        el.innerHTML += text[i];
-        if (text[i] === '.' && text[i+1] === ' ' && text[i+2] === '.') {
-          await delay(1000);
-        }
-        await delay(delayTime);
+        line.innerHTML += text[i];
+        await delay(slow ? 100 : 60); // был 80, стал медленнее
       }
-    }
+      return line;
+    };
 
-    async function startSequence() {
-      startBtn.style.display = 'none';
-      await typeText(stage1, output, 50);
+    const glitchFlash = async () => {
+      glitch.style.display = 'flex';
+      await delay(120);
+      glitch.style.display = 'none';
+    };
+
+    const startSequence = async () => {
+      startBtn.classList.add("hidden");
+      await typeLine(">> CONFESSION-LOG_0173 :: ACCESS GRANTED");
+      await typeLine(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED");
+      await delay(400);
+      await typeLine(">>  ");
+      await delay(300);
+      await typeLine(">> Parsing soul fragment...");
+      await delay(800);
+      await typeLine(">>  ");
+      await typeLine(">> [IN LUMEN VERITAS]");
       await delay(1000);
-      output.innerHTML = '';
+      await typeLine("."); await delay(1000);
+      screen.lastChild.innerHTML = ". ."; await delay(1000);
+      screen.lastChild.innerHTML = ". . ."; await delay(1000);
+      screen.lastChild.innerHTML = "."; await delay(1000);
+      screen.lastChild.innerHTML = ". ."; await delay(1000);
+      screen.lastChild.innerHTML = ". . ."; await delay(1000);
+      await delay(800);
+      await typeLine(">>  ");
+      await typeLine(">> ██ Data stream unstable ██");
       await delay(1000);
-      gif.style.display = 'block';
-      await typeText(stage2, output, 80);
-      await delay(3000);
-      output.innerHTML = '';
-      gif.style.display = 'none';
-      await typeText(stage3, output, 60);
+      await typeLine(">>  ");
+      await typeLine(">> Salvation Attempt: FAILED");
+      await delay(1000);
+      await typeLine(">>  ");
+      await delay(500);
+      await typeLine(">> SUBJECT 0173: <span class='fuchsia'>“I prayed. No one answered.”</span>", true);
+      await delay(2000);
+      await typeLine(">> SUBJECT 0173: <span class='fuchsia'>“I heard laughter in the static.”</span>", true);
+      await delay(1000);
+      await typeLine(">>  ");
+      await delay(500);
+      await typeLine(">> Faith checksum: NULL");
+      await delay(1000);
+      await glitchFlash();
+      screen.innerHTML = "";
+      await delay(1000);
+      await typeLine(">>  ");
+      await typeLine(">> > SYSTEM RESPONSE:");
       await delay(7000);
-      document.body.innerHTML = '<div id="frame" class="glitch"><pre style="color:red; font-size:2em; text-align:center">' + finalText + '</pre></div>';
-      setTimeout(() => {
-        const junk = setInterval(() => {
-          const div = document.createElement('div');
-          div.style.position = 'absolute';
-          div.style.top = Math.random() * window.innerHeight + 'px';
-          div.style.left = Math.random() * window.innerWidth + 'px';
-          div.style.color = 'red';
-          div.style.fontSize = '1em';
-          div.innerText = finalText;
-          document.body.appendChild(div);
-        }, 100);
-        setTimeout(() => {
-          clearInterval(junk);
-          document.body.innerHTML = '<div style="background:black; width:100%; height:100%;"></div>';
-        }, 3000);
-      }, 5000);
-    }
+      const weSeeYou = document.createElement("div");
+      weSeeYou.innerText = "░░░ WE SEE YOU ░░░";
+      weSeeYou.style.color = "red";
+      weSeeYou.style.fontSize = "2em";
+      weSeeYou.classList.add("shake");
+      screen.appendChild(weSeeYou);
+      await delay(5000);
+      for (let i = 0; i < 30; i++) {
+        let clone = weSeeYou.cloneNode(true);
+        clone.style.position = 'absolute';
+        clone.style.top = `${Math.random() * 100}%`;
+        clone.style.left = `${Math.random() * 100}%`;
+        clone.style.fontSize = `${1 + Math.random() * 1.5}em`;
+        screen.appendChild(clone);
+        await delay(50);
+      }
+      await delay(2000);
+      screen.innerHTML = "";
+    };
 
-    startBtn.addEventListener('click', startSequence);
+    startBtn.addEventListener("click", startSequence);
   </script>
 </body>
-
 </html>
