--- a/index.html
+++ b/index.html
@@ -1,169 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CONFESSION-LOG_0173</title>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
       background-color: black;
       color: white;
       font-family: 'VT323', monospace;
-      margin: 0;
       overflow: hidden;
-      user-select: none;
     }
+
     .screen {
+      width: 80vw;
+      max-width: 900px;
+      height: 80vh;
+      margin: 5vh auto;
       border: 2px solid white;
-      width: 80%;
-      max-width: 800px;
-      margin: 100px auto;
       padding: 20px;
-      position: relative;
-      min-height: 200px;
       box-sizing: border-box;
+      position: relative;
+      white-space: pre-wrap;
+      font-size: 20px;
+      overflow-y: auto;
     }
+
     .start-btn {
       border: 2px solid white;
       padding: 10px 20px;
-      display: inline-block;
+      background: black;
+      color: white;
+      font-size: 20px;
       cursor: pointer;
+      display: inline-block;
+      margin-top: 40vh;
     }
-    .hidden {
-      display: none;
-    }
+
     .fuchsia {
       color: fuchsia;
     }
-    .glitch {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
+
+    .glitching {
+      animation: glitch 0.3s infinite;
     }
-    .glitch img {
-      width: 100%;
-      height: auto;
-    }
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-    }
-    .shake {
-      animation: shake 0.5s infinite;
-    }
-    @keyframes shake {
+
+    @keyframes glitch {
       0% { transform: translate(0, 0); }
-      25% { transform: translate(1px, -1px); }
-      50% { transform: translate(-1px, 1px); }
-      75% { transform: translate(1px, 1px); }
-      100% { transform: translate(-1px, -1px); }
+      20% { transform: translate(-1px, 1px); }
+      40% { transform: translate(1px, -1px); }
+      60% { transform: translate(-1px, -1px); }
+      80% { transform: translate(1px, 1px); }
+      100% { transform: translate(0, 0); }
+    }
+
+    #vhsGlitch, #giphy {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 100%;
+      max-height: 100%;
+      display: none;
+    }
+
+    .red {
+      color: red;
+    }
+
+    .centered-text {
+      text-align: center;
+      font-size: 48px;
     }
   </style>
 </head>
 <body>
-  <div class="screen" id="screen">
-    <div class="start-btn" id="startBtn">Click to start...</div>
+  <div class="screen" id="terminal">
+    <div id="startScreen" class="centered-text">
+      <button class="start-btn" onclick="startTyping()">Click to start...</button>
+    </div>
   </div>
-  <div class="glitch" id="glitch">
-    <img src="vhs-glitch.gif" alt="glitch" />
-  </div>
+  <img id="giphy" src="giphy.gif" alt="Giphy">
+  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
+
   <script>
-    const screen = document.getElementById("screen");
-    const startBtn = document.getElementById("startBtn");
-    const glitch = document.getElementById("glitch");
+    const terminal = document.getElementById('terminal');
+    const startScreen = document.getElementById('startScreen');
+    const giphy = document.getElementById('giphy');
+    const glitch = document.getElementById('vhsGlitch');
 
-    const delay = (ms) => new Promise(res => setTimeout(res, ms));
-
-    const typeLine = async (text, slow = false) => {
-      let line = document.createElement("div");
-      screen.appendChild(line);
+    const sleep = ms => new Promise(res => setTimeout(res, ms));
+    const print = async (text, speed = 100) => {
       for (let i = 0; i < text.length; i++) {
-        line.innerHTML += text[i];
-        await delay(slow ? 100 : 60); // был 80, стал медленнее
+        terminal.innerHTML += text[i];
+        await sleep(speed);
       }
-      return line;
+      terminal.innerHTML += "\n";
     };
 
-    const glitchFlash = async () => {
-      glitch.style.display = 'flex';
-      await delay(120);
+    const animatedDots = async () => {
+      for (let i = 0; i < 2; i++) {
+        terminal.innerHTML += '.';
+        await sleep(1000);
+      }
+      terminal.innerHTML = terminal.innerHTML.slice(0, -2);
+      for (let i = 0; i < 2; i++) {
+        terminal.innerHTML += '.';
+        await sleep(1000);
+      }
+    };
+
+    async function startTyping() {
+      startScreen.style.display = 'none';
+      terminal.innerHTML = '';
+
+      await print(">> CONFESSION-LOG_0173 :: ACCESS GRANTED");
+      await print(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED");
+      await print(">>\n>> Parsing soul fragment...");
+      await print(">>\n>> [IN LUMEN VERITAS]");
+      await animatedDots();
+      await print("\n>> ██ Data stream unstable ██");
+      await print(">>\n>> Salvation Attempt: FAILED");
+      await sleep(1000);
+
+      terminal.innerHTML = '';
+      await sleep(1000);
+
+      giphy.style.display = 'block';
+      await print(">> SUBJECT 0173: <span class='fuchsia'>\"I prayed. No one answered.\"</span>", 160);
+      await sleep(2000);
+      await print(">> SUBJECT 0173: <span class='fuchsia'>\"I heard laughter in the static.\"</span>", 160);
+      await print(">>\n>> Faith checksum: NULL");
+
+      document.body.addEventListener('click', glitchSequence, { once: true });
+    }
+
+    async function glitchSequence() {
+      terminal.innerHTML = '';
+      giphy.style.display = 'none';
+      glitch.style.display = 'block';
+      await sleep(200);
       glitch.style.display = 'none';
-    };
 
-    const startSequence = async () => {
-      startBtn.classList.add("hidden");
-      await typeLine(">> CONFESSION-LOG_0173 :: ACCESS GRANTED");
-      await typeLine(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED");
-      await delay(400);
-      await typeLine(">>  ");
-      await delay(300);
-      await typeLine(">> Parsing soul fragment...");
-      await delay(800);
-      await typeLine(">>  ");
-      await typeLine(">> [IN LUMEN VERITAS]");
-      await delay(1000);
-      await typeLine("."); await delay(1000);
-      screen.lastChild.innerHTML = ". ."; await delay(1000);
-      screen.lastChild.innerHTML = ". . ."; await delay(1000);
-      screen.lastChild.innerHTML = "."; await delay(1000);
-      screen.lastChild.innerHTML = ". ."; await delay(1000);
-      screen.lastChild.innerHTML = ". . ."; await delay(1000);
-      await delay(800);
-      await typeLine(">>  ");
-      await typeLine(">> ██ Data stream unstable ██");
-      await delay(1000);
-      await typeLine(">>  ");
-      await typeLine(">> Salvation Attempt: FAILED");
-      await delay(1000);
-      await typeLine(">>  ");
-      await delay(500);
-      await typeLine(">> SUBJECT 0173: <span class='fuchsia'>“I prayed. No one answered.”</span>", true);
-      await delay(2000);
-      await typeLine(">> SUBJECT 0173: <span class='fuchsia'>“I heard laughter in the static.”</span>", true);
-      await delay(1000);
-      await typeLine(">>  ");
-      await delay(500);
-      await typeLine(">> Faith checksum: NULL");
-      await delay(1000);
-      await glitchFlash();
-      screen.innerHTML = "";
-      await delay(1000);
-      await typeLine(">>  ");
-      await typeLine(">> > SYSTEM RESPONSE:");
-      await delay(7000);
-      const weSeeYou = document.createElement("div");
-      weSeeYou.innerText = "░░░ WE SEE YOU ░░░";
-      weSeeYou.style.color = "red";
-      weSeeYou.style.fontSize = "2em";
-      weSeeYou.classList.add("shake");
-      screen.appendChild(weSeeYou);
-      await delay(5000);
-      for (let i = 0; i < 30; i++) {
-        let clone = weSeeYou.cloneNode(true);
-        clone.style.position = 'absolute';
-        clone.style.top = `${Math.random() * 100}%`;
-        clone.style.left = `${Math.random() * 100}%`;
-        clone.style.fontSize = `${1 + Math.random() * 1.5}em`;
-        screen.appendChild(clone);
-        await delay(50);
+      const chaos = [
+        "ERROR: ANIMA CONSUMPTA",
+        "SANGUIS MEUS, LUX TENEBRIS",
+        "SATANAS EXAUDI NOS",
+        "DOMINUS MORTIS",
+        "FAITH.TXT: CORRUPTED",
+        "INFERNUM ACCESS GRANTED",
+        "††† DEUS ABANDONED †††"
+      ];
+
+      for (let i = 0; i < 100; i++) {
+        const msg = chaos[Math.floor(Math.random() * chaos.length)];
+        terminal.innerHTML += `<div class='red glitching'>${msg}</div>`;
+        await sleep(20);
       }
-      await delay(2000);
-      screen.innerHTML = "";
-    };
 
-    startBtn.addEventListener("click", startSequence);
+      await sleep(1000);
+      terminal.innerHTML = '';
+
+      await print(">>\n>> > SYSTEM RESPONSE:", 120);
+      await sleep(7000);
+
+      const msg = "░░░ WE SEE YOU ░░░";
+      for (let i = 0; i < msg.length; i++) {
+        terminal.innerHTML += `<span class='red glitching' style='font-size:48px;'>${msg[i]}</span>`;
+        await sleep(200);
+      }
+
+      await sleep(5000);
+      terminal.innerHTML = '';
+      for (let i = 0; i < 200; i++) {
+        terminal.innerHTML += `<span class='red glitching' style='position:absolute; left:${Math.random()*100}%; top:${Math.random()*100}%;'>░░░ WE SEE YOU ░░░</span>`;
+        await sleep(10);
+      }
+
+      await sleep(2000);
+      terminal.innerHTML = '';
+    }
   </script>
 </body>
 </html>
