--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CONFESSION-LOG_0173</title>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
   <style>
     html, body {
       margin: 0;
@@ -41,7 +41,7 @@
     }
 
     .fuchsia {
-      color: fuchsia;
+      color: #ed0dd9;
     }
 
     .glitching {
@@ -83,8 +83,8 @@
       <button class="start-btn" onclick="startTyping()">Click to start...</button>
     </div>
   </div>
-  <img id="giphy" src="giphy.gif" alt="Giphy">
-  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
+  <img id="giphy" src="giphy.gif" alt="Giphy" />
+  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" />
 
   <script>
     const terminal = document.getElementById('terminal');
@@ -93,11 +93,25 @@
     const glitch = document.getElementById('vhsGlitch');
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
+
     const print = async (text, speed = 100) => {
       for (let i = 0; i < text.length; i++) {
         terminal.innerHTML += text[i];
         await sleep(speed);
       }
+      terminal.innerHTML += "\n";
+    };
+
+    const typeStyledText = async (text, className, speed = 100) => {
+      const span = document.createElement("span");
+      span.className = className;
+      terminal.appendChild(span);
+
+      for (let i = 0; i < text.length; i++) {
+        span.innerHTML += text[i];
+        await sleep(speed);
+      }
+
       terminal.innerHTML += "\n";
     };
 
@@ -130,9 +144,13 @@
       await sleep(1000);
 
       giphy.style.display = 'block';
-      await print(">> SUBJECT 0173: <span class='fuchsia'>\"I prayed. No one answered.\"</span>", 160);
-      await sleep(2000);
-      await print(">> SUBJECT 0173: <span class='fuchsia'>\"I heard laughter in the static.\"</span>", 160);
+
+      await print(">> SUBJECT 0173: ", 100);
+      await typeStyledText("\"I prayed. No one answered.\"", "fuchsia", 100);
+
+      await print(">> SUBJECT 0173: ", 100);
+      await typeStyledText("\"I heard laughter in the static.\"", "fuchsia", 100);
+
       await print(">>\n>> Faith checksum: NULL");
 
       document.body.addEventListener('click', glitchSequence, { once: true });
