--- a/index.html
+++ b/index.html
@@ -57,16 +57,6 @@
       100% { transform: translate(0, 0); }
     }
 
-    #vhsGlitch, #giphy {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      max-width: 100%;
-      max-height: 100%;
-      display: none;
-    }
-
     .red {
       color: red;
     }
@@ -75,16 +65,61 @@
       text-align: center;
       font-size: 48px;
     }
+
+    .noise {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: url('noise.gif');
+      pointer-events: none;
+      opacity: 0.05;
+      z-index: 9999;
+    }
+
+    #screen-flicker {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: black;
+      z-index: 9998;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.1s;
+    }
+
+    .blood-text {
+      position: absolute;
+      color: crimson;
+      font-size: 32px;
+      opacity: 0;
+      animation: flickerText 2s infinite;
+      pointer-events: none;
+      z-index: 10000;
+    }
+
+    @keyframes flickerText {
+      0%, 100% { opacity: 0; }
+      50% { opacity: 0.6; transform: scale(1.05); }
+    }
   </style>
 </head>
 <body>
+  <div class="noise"></div>
+  <div id="screen-flicker"></div>
   <div class="screen" id="terminal">
     <div id="startScreen" class="centered-text">
       <button class="start-btn" onclick="startTyping()">Click to start...</button>
     </div>
   </div>
-  <img id="giphy" src="giphy.gif" alt="Giphy" />
-  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" />
+  <img id="giphy" src="giphy.gif" alt="Giphy" style="display: none;" />
+  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="display: none;" />
+  <audio id="bg-audio" autoplay loop>
+    <source src="creepy-bg.mp3" type="audio/mpeg" />
+  </audio>
 
   <script>
     const terminal = document.getElementById('terminal');
@@ -94,9 +129,14 @@
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
 
+    function distortChar(c) {
+      const glitchChars = ['█','▓','░','#','%','@','*'];
+      return Math.random() < 0.1 ? glitchChars[Math.floor(Math.random() * glitchChars.length)] : c;
+    }
+
     const print = async (text, speed = 100) => {
       for (let i = 0; i < text.length; i++) {
-        terminal.innerHTML += text[i];
+        terminal.innerHTML += distortChar(text[i]);
         await sleep(speed);
       }
       terminal.innerHTML += "\n";
@@ -108,7 +148,7 @@
       terminal.appendChild(span);
 
       for (let i = 0; i < text.length; i++) {
-        span.innerHTML += text[i];
+        span.innerHTML += distortChar(text[i]);
         await sleep(speed);
       }
 
@@ -126,6 +166,30 @@
         await sleep(1000);
       }
     };
+
+    async function flicker(times = 3) {
+      const flickerDiv = document.getElementById('screen-flicker');
+      for (let i = 0; i < times; i++) {
+        flickerDiv.style.opacity = '1';
+        await sleep(50 + Math.random() * 100);
+        flickerDiv.style.opacity = '0';
+        await sleep(50 + Math.random() * 200);
+      }
+    }
+
+    function spawnBloodText() {
+      const phrases = ["HELP", "RUN", "IT'S HERE", "PRAY", "NO ESCAPE"];
+      const div = document.createElement('div');
+      div.className = 'blood-text';
+      div.innerText = phrases[Math.floor(Math.random() * phrases.length)];
+      div.style.top = `${Math.random() * 80}vh`;
+      div.style.left = `${Math.random() * 80}vw`;
+      document.body.appendChild(div);
+
+      setTimeout(() => div.remove(), 3000);
+    }
+
+    setInterval(spawnBloodText, 5000);
 
     async function startTyping() {
       startScreen.style.display = 'none';
@@ -162,6 +226,8 @@
       glitch.style.display = 'block';
       await sleep(200);
       glitch.style.display = 'none';
+
+      await flicker(6);
 
       const chaos = [
         "ERROR: ANIMA CONSUMPTA",
