--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
       margin: 0;
       padding: 0;
       background-color: black;
-      color: #d3d3d3;
+      color: white;
       font-family: 'VT323', monospace;
       overflow: hidden;
+      animation: float 8s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translate(0, 0); }
+      50% { transform: translate(1px, -1px); }
     }
 
     .screen {
@@ -20,147 +26,245 @@
       max-width: 900px;
       height: 80vh;
       margin: 5vh auto;
-      border: 1px solid #444;
+      border: 2px solid white;
       padding: 20px;
       box-sizing: border-box;
       position: relative;
-      white-space: pre-wrap;
       font-size: 20px;
       overflow-y: auto;
-      background: rgba(0, 0, 0, 0.8);
+      white-space: pre-wrap;
     }
 
     .start-btn {
-      border: 1px solid #777;
+      border: 2px solid white;
       padding: 10px 20px;
       background: black;
-      color: #aaa;
+      color: white;
       font-size: 20px;
       cursor: pointer;
       display: inline-block;
       margin-top: 40vh;
     }
 
-    .fuchsia {
-      color: #c084fc;
-    }
-
+    .fuchsia { color: #ed0dd9; }
+    .red { color: red; }
     .glitching {
-      animation: glitch 0.3s infinite;
+      animation: glitch 0.2s infinite;
     }
 
     @keyframes glitch {
-      0% { transform: translate(0, 0); opacity: 1; }
-      20% { transform: translate(-0.5px, 0.5px); opacity: 0.9; }
-      40% { transform: translate(0.5px, -0.5px); opacity: 1; }
-      60% { transform: translate(-0.5px, -0.5px); opacity: 0.85; }
-      80% { transform: translate(0.5px, 0.5px); opacity: 1; }
-      100% { transform: translate(0, 0); opacity: 1; }
+      0% { transform: translate(0, 0); }
+      25% { transform: translate(-1px, 1px); }
+      50% { transform: translate(1px, -1px); }
+      75% { transform: translate(-2px, 2px); }
+      100% { transform: translate(0, 0); }
     }
 
-    .centered-text {
-      text-align: center;
-      font-size: 36px;
-      color: #888;
-    }
-
-    #noise {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      opacity: 0.03;
-      z-index: -1;
+    #giphy, #vhsGlitch, #noiseGif {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 100%;
+      max-height: 100%;
+      display: none;
       pointer-events: none;
+      z-index: 10;
+    }
+
+    #noiseGif {
+      opacity: 0.08;
+      z-index: 1;
+    }
+
+    audio {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <img src="noise.gif" id="noise" alt="Static noise" />
-  <audio id="bgm" src="creepy-bg.mp3" loop preload="auto"></audio>
-
+  <audio id="bgAudio" src="creepy-bg.mp3" autoplay loop></audio>
   <div class="screen" id="terminal">
     <div id="startScreen" class="centered-text">
-      <button class="start-btn" onclick="startTyping()">ACCESS LOG</button>
+      <button class="start-btn" onclick="startSequence()">Click to start...</button>
     </div>
   </div>
+  <img id="giphy" src="giphy.gif" alt="Giphy">
+  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
+  <img id="noiseGif" src="noise.gif" alt="Noise">
 
   <script>
     const terminal = document.getElementById('terminal');
     const startScreen = document.getElementById('startScreen');
-    const bgm = document.getElementById('bgm');
+    const giphy = document.getElementById('giphy');
+    const glitch = document.getElementById('vhsGlitch');
+    const noise = document.getElementById('noiseGif');
+    const bgAudio = document.getElementById('bgAudio');
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
 
-    const print = async (text, speed = 60) => {
-      for (let i = 0; i < text.length; i++) {
-        terminal.innerHTML += text[i];
-        await sleep(speed);
-      }
-      terminal.innerHTML += "\n";
-    };
-
-    const typeStyledText = async (text, className, speed = 60) => {
-      const span = document.createElement("span");
-      span.className = className;
+    async function typeText(text, speed = 50, className = '') {
+      const span = document.createElement('span');
+      if (className) span.className = className;
       terminal.appendChild(span);
 
       for (let i = 0; i < text.length; i++) {
         span.innerHTML += text[i];
         await sleep(speed);
       }
-
-      terminal.innerHTML += "\n";
-    };
-
-    async function startTyping() {
-      startScreen.style.display = 'none';
-      terminal.innerHTML = '';
-      bgm.volume = 0.3;
-      bgm.play();
-
-      await print(">> LOG ID: CONFESSION-0173");
-      await print(">> SYSTEM PROTOCOL: RECALLING MEMORY FRAGMENT...");
-      await sleep(1200);
-      await print(">> Fragment loaded.");
-      await sleep(1000);
-
-      await typeStyledText("\"It wasn’t supposed to remember.\"", "fuchsia", 80);
-      await sleep(800);
-      await typeStyledText("\"But the mirror blinked first.\"", "fuchsia", 80);
-      await sleep(1500);
-
-      await print(">> [DATA RECONSTRUCTION INTEGRITY: 17%]");
-      await sleep(1200);
-      await print(">> ... anomalies detected.");
-      await sleep(1200);
-
-      await glitchSequence();
+      terminal.appendChild(document.createElement('br'));
     }
 
-    async function glitchSequence() {
-      const thoughts = [
-        "you saw it too",
-        "the door never closed",
-        "they never stopped watching",
-        "it breathes through wires",
-        "she said your name in reverse",
-        "static is not silence",
-        "you're not the first"
+    async function dotsPause() {
+      for (let i = 0; i < 2; i++) {
+        await typeText(".", 1000);
+      }
+      terminal.innerHTML = terminal.innerHTML.slice(0, -4); // удалить две последние точки и <br>
+      await typeText(".", 1000);
+    }
+
+    async function startSequence() {
+      startScreen.style.display = 'none';
+      terminal.innerHTML = '';
+      noise.style.display = 'block';
+
+      try {
+        await bgAudio.play();
+      } catch(e) {
+        console.log("User interaction needed for autoplay.");
+      }
+
+      await typeText(">> CONFESSION-LOG_0173 :: ACCESS GRANTED", 40);
+      await typeText(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED", 40);
+      await typeText(">>", 40);
+      await typeText(">> Parsing soul fragment...", 40);
+      await typeText(">>", 40);
+      await typeText(">> [IN LUMEN VERITAS]", 40);
+      await dotsPause();
+      await typeText(">>", 40);
+      await typeText(">> ██ Data stream unstable ██", 40);
+      await typeText(">>", 40);
+      await typeText(">> Salvation Attempt: FAILED", 40);
+
+      await sleep(1000);
+      terminal.innerHTML = '';
+
+      await sleep(500);
+      giphy.style.display = 'block';
+
+      await typeText(">> SUBJECT 0173: ", 40);
+      await typeText("“I prayed. No one answered.”", 200, 'fuchsia');
+
+      await sleep(2000);
+
+      await typeText(">> SUBJECT 0173: ", 40);
+      await typeText("“I heard laughter in the static.”", 200, 'fuchsia');
+
+      await typeText(">>", 40);
+      await typeText(">> Faith checksum: NULL", 40);
+
+      document.body.addEventListener('click', glitchPhase, { once: true });
+    }
+
+    async function glitchPhase() {
+      terminal.innerHTML = '';
+      giphy.style.display = 'none';
+      noise.style.display = 'none';
+
+      glitch.style.display = 'block';
+      await sleep(100);
+      glitch.style.display = 'none';
+
+      await spawnErrors();
+      await sleep(1000);
+      await spawnSymbols();
+
+      document.body.addEventListener('click', finalPhase, { once: true });
+    }
+
+    async function spawnErrors() {
+      const chaos = [
+        "††† SATANAS EXAUDI NOS †††",
+        "ERROR: LUX ABSCONDITA",
+        "DOMINUS MORTIS",
+        "ANIMA DAMNATA",
+        "CRUCIFIXUS IN VITA",
+        "ERROR 666: REVELATIO",
+        "SANGUIS MEUS, LUX TENEBRIS",
+        "INFERNUM ACCESS GRANTED",
+        "CORPUS NIHIL EST",
+        "FAITH.TXT: CORRUPTED"
       ];
 
-      for (let i = 0; i < thoughts.length; i++) {
-        await sleep(800);
-        await print(`>> ${thoughts[i]}`, 70);
+      for (let i = 0; i < 80; i++) {
+        const msg = chaos[Math.floor(Math.random() * chaos.length)];
+        const div = document.createElement('div');
+        div.className = 'red glitching';
+        div.textContent = msg;
+        terminal.appendChild(div);
+        await sleep(25);
+      }
+    }
+
+    async function spawnSymbols() {
+      terminal.innerHTML = '';
+      for (let i = 0; i < 300; i++) {
+        const span = document.createElement('span');
+        span.style.position = 'absolute';
+        span.style.left = `${Math.random() * 100}%`;
+        span.style.top = `${Math.random() * 100}%`;
+        span.style.color = ['#0ff', '#ed0dd9', '#f00', '#0f0', '#00f'][Math.floor(Math.random() * 5)];
+        span.style.fontSize = `${Math.random() * 24 + 12}px`;
+        span.style.animation = 'glitch 0.2s infinite';
+        span.textContent = Math.random() < 0.3 ? "█" : Math.random().toString(36).charAt(2);
+        document.body.appendChild(span);
+        await sleep(5);
+      }
+    }
+
+    async function finalPhase() {
+      document.body.innerHTML = '<div class="screen" id="terminal"></div>';
+      const terminal = document.getElementById('terminal');
+
+      const sleep = ms => new Promise(res => setTimeout(res, ms));
+      const type = async (text, speed = 50) => {
+        for (let i = 0; i < text.length; i++) {
+          terminal.innerHTML += text[i];
+          await sleep(speed);
+        }
+        terminal.innerHTML += "<br>";
+      };
+
+      await type(">>", 50);
+      await type(">> > SYSTEM RESPONSE:", 60);
+
+      await sleep(7000);
+
+      const msg = "░░░ WE SEE YOU ░░░";
+      for (let i = 0; i < msg.length; i++) {
+        const span = document.createElement('span');
+        span.textContent = msg[i];
+        span.className = 'red glitching';
+        span.style.fontSize = '48px';
+        terminal.appendChild(span);
+        await sleep(200);
+      }
+
+      await sleep(5000);
+      terminal.innerHTML = '';
+      for (let i = 0; i < 200; i++) {
+        const span = document.createElement('span');
+        span.textContent = "░░░ WE SEE YOU ░░░";
+        span.className = 'red glitching';
+        span.style.position = 'absolute';
+        span.style.left = `${Math.random() * 100}%`;
+        span.style.top = `${Math.random() * 100}%`;
+        document.body.appendChild(span);
+        await sleep(10);
       }
 
       await sleep(2000);
-      terminal.innerHTML = '';
-      await print(">> SYSTEM: connection lost...", 100);
-      await sleep(4000);
-      await typeStyledText("we're still here.", "fuchsia", 150);
+      document.body.innerHTML = '';
     }
   </script>
 </body>
